# chip-8

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
assets/: resources.qrc
src/: main.cpp
src/core/: CPU.cpp  CPU.h  CPUStatus.h  Chip8.cpp  Chip8.h  Chip8Display.cpp  Chip8Display.h  Display.cpp  Display.h  Font.h  Keypad.cpp  Keypad.h  Memory.cpp  Memory.h  Timer.cpp  Timer.h
src/core/opcode/: Opcode.cpp  Opcode.h
src/core/opcode/handlers/: Handle0x0.cpp  Handle0x1.cpp  Handle0x2.cpp  Handle0x3.cpp  Handle0x4.cpp  Handle0x5.cpp  Handle0x6.cpp  Handle0x7.cpp  Handle0x8.cpp  Handle0x9.cpp  Handle0xA.cpp  Handle0xB.cpp  Handle0xC.cpp  Handle0xD.cpp  Handle0xE.cpp  Handle0xF.cpp
src/platform/: Action.h  Application.cpp  Application.h  Audio.cpp  Audio.h  AudioOutput.h  DefaultWidget.cpp  DefaultWidget.h  EmulationClock.cpp  EmulationClock.h  EmulationWidget.cpp  EmulationWidget.h  EventHandler.cpp  EventHandler.h  Keymap.cpp  Keymap.h  MainWindow.cpp  MainWindow.h  Renderer.cpp  Renderer.h  SoundEffect.cpp  SoundEffect.h  Texture.cpp  Texture.h  Widget.cpp  Widget.h  Window.cpp  Window.h
